Added turicreate one-shot training

--- a/solutions/ML5/notebook.ipynb
+++ b/solutions/ML5/notebook.ipynb
@@ -24,7 +24,8 @@
     "\n",
     "\n",
     "# Create a model. This step will take a few hours on CPU and about an hour on GPU\n",
-    "model = tc.one_shot_object_detector.create(starter_images, 'label')"
+    "model = tc.one_shot_object_detector.create(starter_images, 'label')\n",
+    "\n"
    ]
   }
  ],
