--- a/solutions/ML5/dataset.ipynb
+++ b/solutions/ML5/dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,55 @@
     "        \n",
     "        cropped_img = img[y1:y2, x1:x2]\n",
     "        \n",
-    "        Image.fromarray(cropped_img).save(\"wheelrim_testing/cropped_wheelrim.png\")"
+    "    Image.fromarray(cropped_img).save(\"wheelrim_testing/cropped_wheelrim.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Testing lifting pads annots\n",
+    "annot_file = read_json(\"liftingpads_testing/via_region_data.json\")\n",
+    "\n",
+    "for imgname, annot in annot_file.items():\n",
+    "    if imgname != \"frame_400.jpg\":continue\n",
+    "    \n",
+    "    imgpath = f\"liftingpads_testing/{imgname}\"\n",
+    "    img = read_img(imgpath)\n",
+    "    c = 0\n",
+    "    for region in annot['regions']:\n",
+    "        coords, identity = get_coords_from_annot(region, identity_name=\"image_type\")\n",
+    "        \n",
+    "        bbox = get_bbox_from_polycoords(coords)\n",
+    "        x1,y1,x2,y2 = bbox\n",
+    "        \n",
+    "        cropped_img = img[y1:y2, x1:x2]\n",
+    "        c += 1\n",
+    "        Image.fromarray(cropped_img).save(f\"liftingpads_testing/cropped_liftingpads{c}.png\")\n",
+    "     \n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correct imgname\n",
+    "annot_file = read_json(\"liftingspads_testing/New json.json\")\n",
+    "\n",
+    "new_annot_file = {}\n",
+    "for imgname, annot in annot_file.items():\n",
+    "    new_imgname = f\"{imgname.split('.')[0]}.jpg\"\n",
+    "    new_annot_file.update({new_imgname:annot})\n",
+    "    \n",
+    "    \n",
+    "dump_json(new_annot_file, \"liftingspads_testing/via_region_data.json\", indent = 1)\n"
    ]
   },
   {
