Added fendercover data for one-shot

--- a/solutions/ML5/dataset.ipynb
+++ b/solutions/ML5/dataset.ipynb
@@ -65,12 +65,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Correct imgname\n",
-    "annot_file = read_json(\"liftingspads_testing/New json.json\")\n",
+    "# fendercover testing\n",
+    "# Testing lifting pads annots\n",
+    "class_name = \"fendercover\"\n",
+    "annot_file = read_json(f\"{class_name}_testing/via_region_data.json\")\n",
+    "\n",
+    "for imgname, annot in annot_file.items():\n",
+    "    if imgname != \"APRIL_04_15_frame_224.jpg\":continue\n",
+    "    \n",
+    "    imgpath = f\"{class_name}_testing/{imgname}\"\n",
+    "    img = read_img(imgpath)\n",
+    "    c = 0\n",
+    "    for region in annot['regions']:\n",
+    "        coords, identity = get_coords_from_annot(region, identity_name=\"image_type\")\n",
+    "        \n",
+    "        bbox = get_bbox_from_polycoords(coords)\n",
+    "        x1,y1,x2,y2 = bbox\n",
+    "        \n",
+    "        #While testing===\n",
+    "    #    print(imgname)\n",
+    "    #    img = draw_box(img, bbox, (255,0,0))\n",
+    "    #show(img)\n",
+    "        \n",
+    "        #while saving=====\n",
+    "        cropped_img = img[y1:y2, x1:x2]\n",
+    "        c += 1\n",
+    "        Image.fromarray(cropped_img).save(f\"{class_name}_testing/cropped_{class_name}{c}.png\")\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correct imgname: Removes the image size from the imgname\n",
+    "\n",
+    "\n",
+    "class_name = \"fendercover\"\n",
+    "annot_file = read_json(f\"{class_name}_testing/Fender_cover.json\")\n",
     "\n",
     "new_annot_file = {}\n",
     "for imgname, annot in annot_file.items():\n",
@@ -78,7 +117,7 @@
     "    new_annot_file.update({new_imgname:annot})\n",
     "    \n",
     "    \n",
-    "dump_json(new_annot_file, \"liftingspads_testing/via_region_data.json\", indent = 1)\n"
+    "dump_json(new_annot_file, f\"{class_name}_testing/via_region_data.json\", indent = 1)\n"
    ]
   },
   {
